force-app/main/default/objects/ssot__PartyBoardCertificationIdentifier__dlm/fields/ssot__PartyBoardCertificationId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PartyBoardCertificationId__c</fullName>
    <label>Party Board Certification</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PartyBoardCertificationId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>