force-app/main/default/objects/ssot__PartyBoardCertificationIdentifier__dlm/fields/ssot__rel_1742275553342_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1742275553342_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PartyBoardCertificationIdentifier_Id_rel</label>
    <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
    <relationshipLabel>PartyBoardCertificationIdentifier_Id_rel</relationshipLabel>
    <relationshipName>rel_1742275553342_end</relationshipName>
    <type>Lookup</type>
</CustomField>