force-app/main/default/objects/ssot__PartyBoardCertificationIdentifier__dlm/fields/ssot__rel_1742275556715_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1742275556715_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PartyBoardCertificationIdentifier_Pa_rel</label>
    <referenceTo>ssot__PartyBoardCertification__dlm</referenceTo>
    <relationshipLabel>PartyBoardCertificationIdentifier_Pa_rel</relationshipLabel>
    <relationshipName>rel_1742275556715_end</relationshipName>
    <type>Lookup</type>
</CustomField>